Estructura Basica (Controller, Service, Repository) completa con generalizaciones

--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -1,10 +1,15 @@
 * {
    font-family: 'Inria Serif';
+   margin: 0;
+   padding: 0;
 }
+
 .header {
    width: 100%;
    background-color: red;
    height: 7vh;
+   max-width: none;
+   min-width: none;
 }
 .welcomeView {
    width: 100%;
