--- a/Frontend/src/styles/Login.css
+++ b/Frontend/src/styles/Login.css
@@ -1,101 +1,204 @@
-form{
-    display:grid;
+/* Estilos para el formulario y sus elementos */
+form {
+    display: grid; /* Muestra el formulario como una cuadrícula */
 }
-.container{
+/* Estilos para los enlaces */
+a {
+    text-decoration: none; /* Elimina la subrayado de los enlaces */
+    color: #5995ED; /* Establece el color de los enlaces a blanco */
+}
+a:hover {
+    color: #000000;
+    text-decoration: underline; /* Cambia el color del enlace a un tono de azul al pasar el mouse */
+}
+/* Estilos para el texto en negrita */
+b {
+    font-size: 1.1rem; /* Establece el tamaño de fuente para el texto en negrita */
+}
+/* Estilos para el contenedor */
+.container {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; /* Organiza los elementos en una columna */
 }
-.header{
-    width: 100%;
-    background-color: red;
-    height: 100px;
-}
-.footer{
-    width: 100%;
-    background-color: red;
-    height: 100px;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-}
-.center{
+/* Estilos para centrar elementos */
+.center {
     display: flex;
-    flex-direction: row;
-}
-.loginImage{
-    width: 45%;
-}
-.login{
-    width: 55%;
-    height: 70vh;
     justify-content: center;
+    align-items: center;
 }
-.formSesion{
-    width: 60%;
-    height: 60%;
+/* Estilos para la respuesta en pantallas pequeñas */
+/* Estilos para la imagen del logotipo */
+.logoimagen {
+    position: absolute;
+    z-index: 1;
+    top: 25%; /* Ajusta la posición desde arriba */
+    left: 35%; /* Ajusta la posición desde la izquierda */
+    transform: translate(-50%, -50%); /* Centra la imagen */
+}
+
+/* Estilos para la imagen de inicio de sesión */
+.loginImage {
+    position: relative;
+    left: 8.5%;
+    opacity: 0.5;
+    line-height: 0;
+    box-shadow: 0px 13px 16px 10px #cbced1;
+}
+/* Estilos para la sección de inicio de sesión */
+.login {
+    width: 50%;
+    height: 32rem;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2.3rem;
+}
+
+/* Estilos para el formulario de inicio de sesión */
+.formSesion {
+    color: #000000;
+    width: 70%;
+    height: 90%;
     border-radius: 15px;
     background-color: #EAEAEA;
-    padding: 40px 30px 30px 30px;
+    padding: 25px;
     margin-left: 17%;
+    margin-top: 1rem;
     box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #fff;
-   
 }
-.userName{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: fit-content
-}
-.password{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
 
+/* Estilos para el encabezado del formulario */
+.formSesion h1 {
+    font-size: 30px;
+    margin-bottom: 10px;
+    color: #000000;
+    position: relative;
+    margin-top: 0px;
 }
-.iniciarSesion{
+
+.formSesion h1::after {
+    content: '';
+    width: 30px;
+    height: 4px;
+    border-radius: 3px;
+    background: #5995ED;
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+/* Estilos para el texto "Iniciar Sesión" */
+.iniciarSesion {
     text-align: center;
     font-weight: 600;
     font-size: 1.4rem;
 }
-.texto{  
-    font-weight: 600;
-    font-size: 1.4rem;  
-}
-.input{
-    height: 30px;
+/* Estilos para los campos de entrada */
+.input,.inputconf {
+    position: relative;
     border-radius: 6px;
     border-color: transparent;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    padding: 10px 0px 10px;
+    padding-right: 18px;   
 }
-.olvContradiv{
+.input i,.inputconf i{
+    position: absolute;
+    margin-right: 10px;
+    color: #5995ED;
+    left: 93%; /* Ajusta la posición desde la izquierda */
+    transform: translateY(-170%); /* Centra la imagen */
+    
+}
+.inputconf p, .input p{
+    font-size: 0.7rem;
+}
+.inputconf p, .input p {
+    margin: 0px
+}
+
+/* Estilos para el texto "Olvidaste tu contraseña" */
+.olvContradiv {
+    margin: 0;
     text-align: center;
+    padding: 0.3rem;
 }
-.botonAcceder{
+/* Estilos para el campo de botones */
+.btn-field {
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
-.acceder{
-    height: 40px;
-    border-radius: 10px;
+/* Estilos para los botones */
+.btn-field button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
     border-color: transparent;
-    background-color: #fff;
-    box-shadow: 5px 5px 20px #cbced1, -5px -5px 20px #fff;
+    height: 2rem;
+    width: 30%;
+    box-shadow: 2px 2px 4px black;
+    cursor: pointer;
+    color: #fff;
+    background-color: #5995ED;
+    
 }
-.iniciarGoogle{
+.btn-field button:hover {
+    color: #000000;
+}
+/* Estilos para el inicio de sesión con Google */
+.iniciarGoogle {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    line-height: 0px;
 }
-.googleTexto{
+.googleTexto {
     display: inline-block;
-    padding-right: 3%;
+    padding-right: 1%;
 }
-.botonGoogle{
+.botonGoogle {
     border-color: transparent;
+    margin-top: 0.5rem;
     background-color: #EAEAEA;
+    cursor: pointer;
+    color: #5995ED;
+    
 }
-.registro{
-    width: 60%;
-    justify-content: center;
-    margin-left: 33%;
+/* Estilos para el span */
+span {
+    position: relative;
+    cursor: pointer;
+}
+@media (max-width: 650px) {
+    .formSesion{
+        width: 120%;
+        height: 100%;
+        padding: 3rem;
+        margin:0 auto;
+       }
+    .container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-right:7rem; 
+       }
+    .loginImage {
+        display: none; /* Oculta loginImage en pantallas pequeñas */
+    }
+    .logoimagen {
+        display: none; /* Oculta logoimagen en pantallas pequeñas */
+    }
+    .iniciarGoogle{
+        line-height: normal;
+    }
+    .formSesion h1{
+        font-size: 1.6rem;
+        margin-bottom: 3px;
+    }
 }
